[package]
    name = "jimmy-rs"

    authors     = ["Rhelvetican", "xeondev"]
    description = "A type-safe JSON builder using the typestate pattern that ensures syntactically correct JSON at compile time."
    homepage    = "https://www.github.com/Rhelvetican"
    keywords    = ["json"]

    edition = "2024"
    version = "1.0.1"

    license = "MIT"
